Version (SVN)
-------------------------------

XML:   Resolved issue CASTOR-1765 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add xml/validators to checkstyle and do checkstyle cleanup
       Details: http://jira.codehaus.org/browse/CASTOR-1765
       (Edward - 20061225)

XML:   Resolved issue CASTOR-1722 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validating <xsd:IDREF> and <xsd:IDREFS> during (un)marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1722
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1764 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrectly generated qualified class name for classes in
       type hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1764
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1760 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       <xsd:int> mappes onto Java type 'int/java.lang.Integer' again.
       Details: http://jira.codehaus.org/browse/CASTOR-1760
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1761 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Java 5 breaks BigDecimal validation
       Details: http://jira.codehaus.org/browse/CASTOR-1761
       (Edward - 20061223)

XML:   Resolved issue CASTOR-1758 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Complete facet handling for numerical types
       Details: http://jira.codehaus.org/browse/CASTOR-1758
       (Edward - 20061223)

Version 1.1-M1, Dec 23, 2006
-------------------------------

XML:   Resolved issue CASTOR-1756 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based cleanup in builder/types
       Details: http://jira.codehaus.org/browse/CASTOR-1756
       (Edward - 20061222)

XML:   Resolved issue CASTOR-1755 using contribution from Edward Kuns [edward.kuns@aspect.com]